// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entry should produce correct entries with default options for legacy browsers in development mode 1`] = `
Object {
  "entry": Object {
    "index": Array [
      "babel-polyfill",
      "react-hot-loader/patch",
      "webpack-hot-middleware/client",
      "index.js",
    ],
  },
}
`;

exports[`entry should produce correct entries with default options for legacy browsers in production mode 1`] = `
Object {
  "entry": Object {
    "index": Array [
      "babel-polyfill",
      "index.js",
    ],
  },
}
`;

exports[`entry should produce correct entries with default options for modern browsers in development mode 1`] = `
Object {
  "entry": Object {
    "index": Array [
      "react-hot-loader/patch",
      "webpack-hot-middleware/client",
      "index.js",
    ],
  },
}
`;

exports[`entry should produce correct entries with default options for modern browsers in production mode 1`] = `
Object {
  "entry": Object {
    "index": Array [
      "index.js",
    ],
  },
}
`;
